# noodling

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md
.github/workflows/: main.yml
applescript/: downloadAppleMusicPlaylists.scpt
bash/: dockerClean.sh
configFiles/: VS_CSharp.vssettings  authproxy.cfg  nginx_switch_connection_test.conf  okta_ldap_nginx.conf  vscode.settings.json
docs/: VSCodeExtensions.md
python/: crypto_functions.py  crypto_pricing.py  dns_to_terraform.py  list_coinbase_pro_txs.py  pug_finder.py  pyproject.toml  requirements.txt  unfollow_github_org.py
ruby/: decrypt_data_bag.rb  encrypt_data_bag.rb
zsh/: mac-zshrc  zshrc
