[tool.poetry]
name = "noodling"
version = "0.1.0"
description = "Various disconnected python scripts"
authors = ["Matthew Ahrenstein <matt@ahrenstein.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
PyGithub = "^1.54.1"
argparse = "^1.4.0"
pycoingecko = "^1.4.0"
pylint = "^2.7.2"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"
lxml = "^4.9.1"
google-api-python-client = "^2.0.2"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
